@@ -58,6 +58,7 @@
   CHANGED: UserActions are now managed with ActionMan. In Konfigurator
            you can change settings _about_ useractions.
 
+    FIXED: [ 1578768 ] Wrong sorting by Date column in search dialog
     FIXED: [ 1599142 ] problem with "Rename selects extension" and directories
     FIXED: wrong name after cancelling inplace rename by Esc
     FIXED: locate jumps onto the file after double click
